feat: add Bazel example and CMake compile_commands for editor LSP support

--- a/c-cpp/3.1/3.1.md
+++ b/c-cpp/3.1/3.1.md
@@ -112,25 +112,29 @@ Bazel is a build tool developed by Google, designed for correctness, reproducibi
 **`src/BUILD` file:**
 
 ```python
-# Define a C++ library target
+# my_build_exercise/BUILD
+# Defines the C++ library target
 cc_library(
     name = "utils_lib",
-    srcs = ["utils.cpp"],
-    hdrs = ["../include/my_project/utils.h"],
-    # Tell Bazel where to find the headers for this library
-    copts = ["-I../include"],
+    srcs = ["src/utils.cpp"],
+    hdrs = ["include/my_project/utils.h"],
+    # This is the key fix. It tells Bazel that the "include" directory
+    # should be treated as an include path root. This allows your
+    # #include "my_project/utils.h" to work correctly.
+    strip_include_prefix = "include",
 )
 
-# Define a C++ executable target
+# Defines the C++ executable target
 cc_binary(
     name = "my_app",
-    srcs = ["main.cpp"],
-    # Specify the dependency on our library target
+    srcs = ["src/main.cpp"],
+    # Specifies the dependency on our library target
     deps = [":utils_lib"],
 )
 ```
 
-To build, you run `bazel build //src:my_app`.
+
+To build you run: `bazel build //:my_app`.
 
 -----
 
